--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>James is cool</title>
     <link href="styles.css" rel="stylesheet" />
+    <link href="math.css" rel="stylesheet" />
 
     <!-- LINK FOR ICON SET -->
     <link
@@ -16,15 +17,23 @@
     />
   </head>
 
-  <body>
-    <header>
-      <h1>Auckland Maths Tutoring</h1>
-      <button>Book a session</button>
-      <div>
-        <button>Book a session</button>
+  <body class="text-slate-900 min-h-screen relative text-sm sm:text-base">
+    <header class="flex justify-between gap-8 p-8 max-w-[1000px] mx-auto">
+      <h1 class="text-2xl sm:text-3xl md:text-4xl">Auckland Maths Tutoring</h1>
+      <button
+        class="card-button-secondary px-4 py-2 rounded-full whitespace-nowrap opacity-0 pointer-events-none"
+      >
+        Book a session
+      </button>
+      <div class="fixed top-8 right-8">
+        <button
+          class="card-button-secondary px-4 py-2 rounded-full whitespace-nowrap"
+        >
+          Book a session
+        </button>
       </div>
     </header>
-    <main>
+    <main class="flex flex-col">
       <section id="hero">
         <div>
           <h2>Achievement Into Excellence</h2>
