added video timestamp for reference
start video at 53:44 when returning to the tutorial to complete "maths"
section.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
           ></div>
         </div>
       </section>
+      <!-- video at 53:44 -->
       <section id="maths">
         <div>
           <p>from catch up to acceleration</p>
